force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>Zuora Invoice object. Invoices are bills that you send to customers.</description>
    <label>Invoice</label>
    <nameField>
        
        <label>Invoice Name</label>
        
        
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>