force-app/main/default/objects/Invoice__c/fields/Added_to_Paper_Bill_Queue__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Paper_Bill_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marked as true when invoice is sent to letterstream</inlineHelpText>
    <label>Added to Paper Bill Queue</label>
    <type>Checkbox</type>
</CustomField>