force-app/main/default/objects/Invoice__c/fields/Additional_Inserts__c.field-meta.xml
<CustomField>
    <fullName>Additional_Inserts__c</fullName>
    <inlineHelpText>For letterstream or other mailer, used to store the ID of additional inserts included with invoice pdf sent via paper mail.</inlineHelpText>
    <label>Additional Inserts</label>
    <length>200</length>
    <type>Text</type>
</CustomField>