force-app/main/default/objects/Invoice__c/fields/Approved_Commission_Payment_Total_Due__c.field-meta.xml
<CustomField>
    <fullName>Approved_Commission_Payment_Total_Due__c</fullName>
    <label>Approved Commission Payment Total Due</label>
    <summarizedField>Commission_Payment__c.Amount_Due__c</summarizedField>
    <summaryFilterItems>
        <field>Commission_Payment__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Commission_Payment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>