force-app/main/default/objects/Invoice__c/fields/Bill_Document_Content_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>Bill_Document_Content_Version_ID__c</fullName>
    <description>This is where the content version ID of the most recent published pdf for an invoice needs to go in order for it to be visible in the customer portal.</description>
    <inlineHelpText>This is where the content version ID of the most recent published pdf for an invoice needs to go in order for it to be visible in the customer portal.</inlineHelpText>
    <label>Bill Document Content Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>