force-app/main/default/objects/Invoice__c/fields/Client_Invoice_Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Invoice_Cutoff_Date__c</fullName>
    <inlineHelpText>Datetime specified when generating the Client Invoice that selects the Subscription Orders to include</inlineHelpText>
    <label>Client Invoice Cutoff Date</label>
    <type>DateTime</type>
</CustomField>