force-app/main/default/objects/Invoice__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <inlineHelpText>Set by the ZuoraInvoiceService when downloading invoice PDFs, and used to display in the Customer Portal and send paper bills.</inlineHelpText>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>