force-app/main/default/objects/Invoice__c/fields/Date_QC_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_QC_Complete__c</fullName>
    <label>Date QC Complete</label>
    <type>Date</type>
</CustomField>