force-app/main/default/objects/Invoice__c/fields/Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent__c</fullName>
    <inlineHelpText>Date that Accounting sent the invoice to the client, manually populated</inlineHelpText>
    <label>Date Sent</label>
    <type>Date</type>
</CustomField>