force-app/main/default/objects/Invoice__c/fields/Days_to_QC_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_to_QC_Complete__c</fullName>
    <formula>IF( ISBLANK(Days_to_QC_Manual__c)=TRUE,
CASE(MOD( Date_Received__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( Date_QC_Complete__c - Date_Received__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Date_QC_Complete__c - Date_Received__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Date_QC_Complete__c - Date_Received__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Date_QC_Complete__c - Date_Received__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Date_QC_Complete__c - Date_Received__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Date_QC_Complete__c - Date_Received__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Date_QC_Complete__c - Date_Received__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Date_QC_Complete__c - Date_Received__c )/7)*5)-1,

Days_to_QC_Manual__c)</formula>
    <inlineHelpText>Uses Manual field if filled in, otherwise calculates based on dates (excludes weekends).</inlineHelpText>
    <label>Days to QC Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>