force-app/main/default/objects/Invoice__c/fields/Days_to_QC_Manual__c.field-meta.xml
<CustomField>
    <fullName>Days_to_QC_Manual__c</fullName>
    <label>Days to QC (Manual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>