force-app/main/default/objects/Invoice__c/fields/Downloaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_Date__c</fullName>
    <inlineHelpText>Date that ZuoraInvoiceService downloaded the PDF for this invoice. Indicates that it should not try to retrieve the PDF for the invoice for download.</inlineHelpText>
    <label>Downloaded Date</label>
    <type>Date</type>
</CustomField>