force-app/main/default/objects/Invoice__c/fields/Due_to_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Due_to_Accounting__c</fullName>
    <label>Due to Accounting</label>
    <type>Date</type>
</CustomField>