force-app/main/default/objects/Invoice__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <inlineHelpText>Date on or before which Subscription Orders and Client Invoicing Memos need to be effective for the Invoice Generation flow to pull in</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>