force-app/main/default/objects/Invoice__c/fields/Invoice_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Auto_Number__c</fullName>
    <displayFormat>INV-{00000}</displayFormat>
    <label>Invoice Auto Number</label>
    <type>AutoNumber</type>
</CustomField>