force-app/main/default/objects/Invoice__c/fields/LetterStreamJob__c.field-meta.xml
<CustomField>
    <fullName>LetterStreamJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populated by ContentMailerService when this invoice is sent to LetterStream for mailing</inlineHelpText>
    <label>LetterStreamJob</label>
    <referenceTo>LetterStreamJob__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>