force-app/main/default/objects/Invoice__c/fields/Line_Item_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Total__c</fullName>
    <inlineHelpText>Total from Invoice Line Items</inlineHelpText>
    <label>Line Item Total</label>
    <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>