force-app/main/default/objects/Invoice__c/fields/Netsuite_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Invoice_ID__c</fullName>
    <inlineHelpText>This field is populated by Accounting with the ID of the matching invoice in Netsuite.</inlineHelpText>
    <label>Netsuite Invoice ID #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>