force-app/main/default/objects/Invoice__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Solar</fullName>
            </value>
            <value>
                <fullName>Residential Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>