force-app/main/default/objects/Invoice__c/fields/Ready_for_Email_Send__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Email_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is marked true when a pdf is generated, and marked false when the invoice is emailed</inlineHelpText>
    <label>Ready for Email Send</label>
    <type>Checkbox</type>
</CustomField>