force-app/main/default/objects/Invoice__c/fields/Ready_for_Paper_Bill_Queue__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Paper_Bill_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marked as true when the pdf is generated, marked as false when added to the paper bill queue</inlineHelpText>
    <label>Ready for Paper Bill Queue</label>
    <type>Checkbox</type>
</CustomField>