force-app/main/default/objects/Invoice__c/fields/Reconciliation_Status__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Status__c</fullName>
    <inlineHelpText>This is populated by Accounting when the invoice in Salesforce is reconciled with the invoice in Netsuite.</inlineHelpText>
    <label>Reconciliation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Issues found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>