force-app/main/default/objects/Invoice__c/fields/Statement__c.field-meta.xml
<CustomField>
    <fullName>Statement__c</fullName>
    <formula>IF(

            ISBLANK(

            Bill_Document_Content_Version_ID__c)=true,

            &quot;Statement Coming Soon&quot;,

            HYPERLINK(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=SVGZ&amp;versionId=&quot;&amp;Bill_Document_Content_Version_ID__c,&quot;View Statement&quot;,&quot;_self&quot;)

            )</formula>
    <label>Statement</label>
    <type>Text</type>
</CustomField>