force-app/main/default/objects/Invoice__c/fields/Zuora__Account__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The CRM account that the invoice is associated to.</description>
    <inlineHelpText>The CRM account that the invoice is associated to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>