force-app/main/default/objects/Invoice__c/fields/Zuora__AdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AdjustmentAmount__c</fullName>
    <description>The currency amount of the adjustment applied to the invoice.</description>
    <inlineHelpText>The currency amount of the adjustment applied to the invoice.</inlineHelpText>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>