force-app/main/default/objects/Invoice__c/fields/Zuora__AmountWithoutTax__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AmountWithoutTax__c</fullName>
    <description>The total of the invoice before any taxes are applied.</description>
    <inlineHelpText>The total of the invoice before any taxes are applied.</inlineHelpText>
    <label>Amount Without Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>