force-app/main/default/objects/Invoice__c/fields/Zuora__Balance2__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Balance2__c</fullName>
    <description>The balance due on the invoice after the value for the Amount field is applied.</description>
    <inlineHelpText>The balance due on the invoice after the value for the Amount field is applied.</inlineHelpText>
    <label>Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>