force-app/main/default/objects/Invoice__c/fields/Zuora__Balance__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Balance__c</fullName>
    <description>Zuora Invoice Balance.  This field is deprecated.</description>
    <inlineHelpText>Zuora Invoice Balance.  This field is deprecated.</inlineHelpText>
    <label>Balance (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>