force-app/main/default/objects/Invoice__c/fields/Zuora__BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillingAccount__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The Zuora billing account that the invoice is for.</description>
    <inlineHelpText>The Zuora billing account that the invoice is for.</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>Zuora__CustomerAccount__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>ZInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>