force-app/main/default/objects/Invoice__c/fields/Zuora__CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreatedDate__c</fullName>
    <description>The date when the invoice was created in the Zuora system.</description>
    <label>Zuora Created Date</label>
    <type>DateTime</type>
</CustomField>