force-app/main/default/objects/Invoice__c/fields/Zuora__CreditBalanceAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditBalanceAdjustmentAmount__c</fullName>
    <description>The currency amount of the adjustment applied to the customer&apos;s credit balance.</description>
    <label>Credit Balance Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>