force-app/main/default/objects/Invoice__c/fields/Zuora__Description__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Description__c</fullName>
    <description>Invoice Description.</description>
    <inlineHelpText>Invoice Description.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>