force-app/main/default/objects/Invoice__c/fields/Zuora__DueDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__DueDate__c</fullName>
    <description>The date by which the payment for this invoice is due.</description>
    <inlineHelpText>The date by which the payment for this invoice is due.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>