force-app/main/default/objects/Invoice__c/fields/Zuora__Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Generated_Date__c</fullName>
    <label>Generated On Date</label>
    <type>DateTime</type>
</CustomField>