force-app/main/default/objects/Invoice__c/fields/Zuora__GeneratedDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__GeneratedDate__c</fullName>
    <label>Generated On Date (Deprecated)</label>
    <type>Date</type>
</CustomField>