force-app/main/default/objects/Invoice__c/fields/Zuora__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__InvoiceDate__c</fullName>
    <description>The generation date of the invoice.</description>
    <inlineHelpText>The generation date of the invoice.</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>