force-app/main/default/objects/Invoice__c/fields/Zuora__Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Payment_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term</label>
    <referenceTo>Zuora__PaymentTerm__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>