force-app/main/default/objects/Invoice__c/fields/Zuora__PaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PaymentAmount__c</fullName>
    <description>The amount of payments applied to the invoice.</description>
    <inlineHelpText>The amount of payments applied to the invoice.</inlineHelpText>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>