force-app/main/default/objects/Invoice__c/fields/Zuora__PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PaymentTerm__c</fullName>
    <description>The payment term of the associated billing account.</description>
    <inlineHelpText>The payment term of the associated billing account.</inlineHelpText>
    <label>Payment Term</label>
    <length>32</length>
    <type>Text</type>
</CustomField>