force-app/main/default/objects/Invoice__c/fields/Zuora__Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Posted_Date__c</fullName>
    <description>The date when the invoice was posted.</description>
    <inlineHelpText>The date when the invoice was posted.</inlineHelpText>
    <label>Posted On Date</label>
    <type>DateTime</type>
</CustomField>