force-app/main/default/objects/Invoice__c/fields/Zuora__PostedDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PostedDate__c</fullName>
    <description>The date when the invoice was posted.</description>
    <inlineHelpText>The date when the invoice was posted.</inlineHelpText>
    <label>Posted On Date (Deprecated)</label>
    <type>Date</type>
</CustomField>