force-app/main/default/objects/Invoice__c/fields/Zuora__RefundedAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__RefundedAmount__c</fullName>
    <description>Specifies the amount of a refund that applied against a payment on an earlier the invoice.</description>
    <inlineHelpText>Specifies the amount of a refund that applied against a payment on an earlier the invoice.</inlineHelpText>
    <label>Refunded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>