force-app/main/default/objects/Invoice__c/fields/Zuora__SoldToId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SoldToId__c</fullName>
    <description>zuora sold to contact id</description>
    <label>Sold To Contact Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>