force-app/main/default/objects/Invoice__c/fields/Zuora__Status__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Status__c</fullName>
    <description>The status of the invoice in the system. This status is not the status of the payment of the invoice, just the status of the invoice itself.</description>
    <inlineHelpText>The status of the invoice in the system. This status is not the status of the payment of the invoice, just the status of the invoice itself.</inlineHelpText>
    <label>Status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>