force-app/main/default/objects/Invoice__c/fields/Zuora__TargetDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TargetDate__c</fullName>
    <description>The date you want the invoice generated on.</description>
    <inlineHelpText>The date you want the invoice generated on.</inlineHelpText>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>