force-app/main/default/objects/Invoice__c/fields/Zuora__TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TaxAmount__c</fullName>
    <description>The total amount of the taxes applied to the invoice.</description>
    <inlineHelpText>The total amount of the taxes applied to the invoice.</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>