force-app/main/default/objects/Invoice__c/fields/Zuora__TaxExemptAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TaxExemptAmount__c</fullName>
    <description>The total amount of the invoice that is exempt from taxation.</description>
    <inlineHelpText>The total amount of the invoice that is exempt from taxation.</inlineHelpText>
    <label>Tax Exempt Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>