force-app/main/default/objects/Invoice__c/fields/Zuora__TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TotalAmount__c</fullName>
    <description>The amount of the invoice.</description>
    <inlineHelpText>The amount of the invoice.</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>