force-app/main/default/objects/Invoice__c/fields/Zuora__Zuora_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Zuora_Id__c</fullName>
    <description>The Zuora ID of the invoice.</description>
    <inlineHelpText>The Zuora ID of the invoice.</inlineHelpText>
    <label>Zuora Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>