force-app/main/default/objects/Invoice__c/fields/Zuora__ZuoraId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ZuoraId__c</fullName>
    <description>The Invoice ID in the Zuora system.</description>
    <inlineHelpText>The Invoice ID in the Zuora system.</inlineHelpText>
    <label>Invoice ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>