force-app/main/default/objects/Invoice__c/recordTypes/Client_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Client_Invoice</fullName>
    <active>true</active>
    <label>Client Invoice</label>
</RecordType>