force-app/main/default/objects/Invoice__c/recordTypes/Partner_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Partner_Invoice</fullName>
    <active>true</active>
    <label>Partner Invoice</label>
</RecordType>