force-app/main/default/objects/Invoice__c/listViews/Zuora__All.listView-meta.xml
<ListView>
    <fullName>Zuora__All</fullName>
    <columns>NAME</columns>
    <columns>Ready_for_Email_Send__c</columns>
    <columns>Email_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>